Added random word form option to the menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,9 @@
     <string name="titleWordCount">Word count cap: %d</string>
     <string name="totalWordCount">Words in total: %d</string>
     <string name="untitled">Untitled</string>
-    <string name="action_titleDecorations">Title decorations</string>
     <string name="action_randomTitleLength">Random word count</string>
+    <string name="action_randomWordForm">Random word form</string>
+    <string name="action_titleDecorations">Title decorations</string>
     <string name="action_displayAll">Display all categories</string>
     <string name="action_displayCategory">> %s (%s)</string>
     <string name="action_customTemplate">Custom template</string>
