Updated help text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,9 +117,9 @@
 
         "\n\n\nGENERAL"
 
-        "\n\nPress the big green button on the lower right corner of the screen to" <b>"generate"
+        "\n\nPress the big green button at the lower right corner of the screen to" <b>"generate"
         "new titles."</b> "The chosen category affects which words will appear. You can see the"
-        "used category on the top of the screen. You can change it, along with many other"
+        "used category at the top of the screen. You can change it, along with many other"
         "things, in the dropdown menu at the upper right corner of the screen."
 
         "\n\nPress the" <b>"Custom template"</b> "button next to the title generation button to"
